# api/rest/docs/swagger.json
@@ -159,7 +159,7 @@
                 }
             }
         },
-        "/bid_caching/new": {
+        "/bid_caching/set": {
             "post": {
                 "security": [
                     {
@@ -178,7 +178,7 @@
                 ],
                 "parameters": [
                     {
-                        "description": "BidCaching update Options",
+                        "description": "BidCaching create Options",
                         "name": "options",
                         "in": "body",
                         "required": true,
@@ -221,7 +221,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.BidCachingUpdateRequest"
+                            "$ref": "#/definitions/dto.BidCachingUpdRequest"
                         }
                     }
                 ],
@@ -1796,14 +1796,14 @@
                 }
             }
         },
-        "/refresh_cache": {
-            "post": {
+        "/refresh_cache/delete": {
+            "delete": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Update Refresh Cache setup",
+                "description": "Delete refresh  cache.",
                 "consumes": [
                     "application/json"
                 ],
@@ -1815,23 +1815,19 @@
                 ],
                 "parameters": [
                     {
-                        "description": "Refresh Cache update Options",
+                        "description": "options",
                         "name": "options",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.RefreshCacheUpdateRequest"
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
                         }
                     }
                 ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/utils.BaseResponse"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/refresh_cache/get": {
@@ -1867,6 +1863,82 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/core.RefreshCache"
+                        }
+                    }
+                }
+            }
+        },
+        "/refresh_cache/set": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Create Refresh Cache setup",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RefreshCache"
+                ],
+                "parameters": [
+                    {
+                        "description": "Refresh Cache create Options",
+                        "name": "options",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshCacheUpdateRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/refresh_cache/update": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Update Refresh Cache setup",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "RefreshCache"
+                ],
+                "parameters": [
+                    {
+                        "description": "Refresh Cache update Options",
+                        "name": "options",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RefreshCacheUpdRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/utils.BaseResponse"
                         }
                     }
                 }
@@ -3866,6 +3938,12 @@
         "core.RefreshCacheFilter": {
             "type": "object",
             "properties": {
+                "active": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
                 "country": {
                     "type": "array",
                     "items": {
@@ -4103,12 +4181,20 @@
                 }
             }
         },
+        "dto.BidCachingUpdRequest": {
+            "type": "object",
+            "properties": {
+                "bid_caching": {
+                    "type": "integer"
+                },
+                "rule_id": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.BidCachingUpdateRequest": {
             "type": "object",
             "properties": {
-                "active": {
-                    "type": "boolean"
-                },
                 "bid_caching": {
                     "type": "integer"
                 },
@@ -4226,6 +4312,17 @@
                 }
             }
         },
+        "dto.RefreshCacheUpdRequest": {
+            "type": "object",
+            "properties": {
+                "refresh_cache": {
+                    "type": "integer"
+                },
+                "rule_id": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.RefreshCacheUpdateRequest": {
             "type": "object",
             "properties": {
@@ -4252,6 +4349,9 @@
                 },
                 "refresh_cache": {
                     "type": "integer"
+                },
+                "rule_id": {
+                    "type": "string"
                 }
             }
         },
