# dto/refresh_cache.go
@@ -1,6 +1,7 @@
 package dto
 
 type RefreshCacheUpdateRequest struct {
+	RuleId        string `json:"rule_id"`
 	Publisher     string `json:"publisher"`
 	Domain        string `json:"domain"`
 	Device        string `json:"device"`
@@ -9,6 +10,11 @@ type RefreshCacheUpdateRequest struct {
 	Browser       string `json:"browser"`
 	OS            string `json:"os"`
 	PlacementType string `json:"placement_type"`
+}
+
+type RefreshCacheUpdRequest struct {
+	RuleId       string `json:"rule_id"`
+	RefreshCache int16  `json:"refresh_cache"`
 }
 
 func (rc RefreshCacheUpdateRequest) GetPublisher() string     { return rc.Publisher }
